# Openmp_test

./: CMakeLists.txt  README.md  main.cpp
data/11-03-18-1413/: 10_openmp_test_1.txt  10_openmp_test_10.txt  10_openmp_test_11.txt  10_openmp_test_12.txt  10_openmp_test_13.txt  10_openmp_test_14.txt  10_openmp_test_15.txt  10_openmp_test_16.txt  10_openmp_test_2.txt  10_openmp_test_3.txt  10_openmp_test_4.txt  10_openmp_test_5.txt  10_openmp_test_6.txt  10_openmp_test_7.txt  10_openmp_test_8.txt  10_openmp_test_9.txt  11_openmp_test_1.txt  11_openmp_test_10.txt  11_openmp_test_11.txt  11_openmp_test_12.txt  11_openmp_test_13.txt  11_openmp_test_14.txt  11_openmp_test_15.txt  11_openmp_test_16.txt  11_openmp_test_2.txt  11_openmp_test_3.txt  11_openmp_test_4.txt  11_openmp_test_5.txt  11_openmp_test_6.txt  11_openmp_test_7.txt  11_openmp_test_8.txt  11_openmp_test_9.txt  1_openmp_test_1.txt  1_openmp_test_10.txt  1_openmp_test_11.txt  1_openmp_test_12.txt  1_openmp_test_13.txt  1_openmp_test_14.txt  1_openmp_test_15.txt  1_openmp_test_16.txt  (+137 more)
